# house-synth

./: CMakeLists.txt
.github/workflows/: build.yml
PianoSource/: PianoEditor.cpp  PianoEditor.h  PianoProcessor.cpp  PianoProcessor.h  PianoVoice.cpp  PianoVoice.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthVoice.cpp  SynthVoice.h
StabSource/: StabEditor.cpp  StabEditor.h  StabProcessor.cpp  StabProcessor.h  StabVoice.cpp  StabVoice.h
SupersawSource/: SupersawEditor.cpp  SupersawEditor.h  SupersawProcessor.cpp  SupersawProcessor.h  SupersawVoice.cpp  SupersawVoice.h
